--- a/assets/cl-collage.css
+++ b/assets/cl-collage.css
@@ -25,31 +25,32 @@
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
-  .cl-collage--mobile .collage__item--left:nth-child(3n - 2) {
+  .cl-collage--mobile .cl-collage__item--left:nth-child(3n - 2) {
     grid-column: span 2;
   }
 
-  .cl-collage--mobile .collage__item--left:nth-child(3n - 2):nth-last-child(2) {
+  .cl-collage--mobile
+    .cl-collage__item--left:nth-child(3n - 2):nth-last-child(2) {
     grid-column: span 1;
   }
 
-  .cl-collage--mobile .collage__item--left:nth-child(3n) {
+  .cl-collage--mobile .cl-collage__item--left:nth-child(3n) {
     grid-column-start: 2;
   }
 
-  .cl-collage--mobile .collage__item--right:nth-child(3n - 2) {
+  .cl-collage--mobile .cl-collage__item--right:nth-child(3n - 2) {
     grid-column-start: 1;
   }
 
-  .cl-collage--mobile .collage__item--right:nth-child(3n - 2):last-child {
+  .cl-collage--mobile .cl-collage__item--right:nth-child(3n - 2):last-child {
     grid-column: span 2;
   }
 
-  .cl-collage--mobile .collage__item--right:nth-child(3n - 1) {
+  .cl-collage--mobile .cl-collage__item--right:nth-child(3n - 1) {
     grid-column-start: 2;
   }
 
-  .cl-collage--mobile .collage__item--right:nth-child(3n) {
+  .cl-collage--mobile .cl-collage__item--right:nth-child(3n) {
     grid-column: 1 / span 2;
   }
 }
