--- a/snippets/cl-card-collection.liquid
+++ b/snippets/cl-card-collection.liquid
@@ -19,6 +19,8 @@
     assign ratio = 0.7
   elsif card_collection.featured_image and media_aspect_ratio == 'adapt'
     assign ratio = card_collection.featured_image.aspect_ratio
+  elsif media_aspect_ratio == 'landscape'
+    assign ratio = 1.35
   endif
   if ratio == 0 or ratio == null
     assign ratio = 1
