--- a/assets/cl-collage.css
+++ b/assets/cl-collage.css
@@ -70,11 +70,13 @@
 
   .cl-collage__item--left:nth-child(3n - 2):last-child {
     grid-column: 3 / span 2;
+    grid-row: span 1;
   }
 
   .cl-collage__item--left:nth-child(3n - 1) {
     grid-column-start: 3;
   }
+
   .cl-collage__item--left:nth-child(3n) {
     grid-column-start: 4;
   }
