--- a/assets/app.css
+++ b/assets/app.css
@@ -785,7 +785,30 @@ span.cl-swatch {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
-/** Forms **/
+/** Custom Collage **/
+
+.cl-collage-page-width {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+@media (min-width: 750px) {
+  .cl-collage-page-width {
+    padding-left: 10%;
+    padding-right: 10%;
+  }
+}
+
+@media (min-width: 990px) {
+  .cl-collage-page-width {
+    padding-left: 25%;
+    padding-right: 25%;
+  }
+}
+
+.cl-collage .card__information {
+  padding-bottom: 0px !important;
+}
 
 *, ::before, ::after {
   --tw-border-spacing-x: 0;
