--- a/sections/rich-text.liquid
+++ b/sections/rich-text.liquid
@@ -21,7 +21,7 @@
         {%- for block in section.blocks -%}
           {%- case block.type -%}
             {%- when 'heading' -%}
-              {%- if block.settings.is_heading -%}
+              {%- if section.settings.is_heading -%}
                 <h1
                   class="rich-text__heading rte inline-richtext {{ block.settings.heading_size }}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}"
                   {{ block.shopify_attributes }}
