--- a/sections/newsletter.liquid
+++ b/sections/newsletter.liquid
@@ -88,7 +88,7 @@
                 </div>
                 <button
                   type="submit"
-                  class="button twcss-bg-black"
+                  class="button twcss-bg-black before:twcss-shadow-none after:twcss-shadow-none"
                   name="commit"
                   id="Subscribe"
                   aria-label="{{ 'newsletter.button_label' | t }}"
