--- a/assets/base.css
+++ b/assets/base.css
@@ -1889,7 +1889,7 @@ input[type='checkbox'] {
 }
 
 .form-status-list li {
-  list-style-position: inside;
+  list-style-position: outside;
 }
 
 .form-status-list .link::first-letter {
@@ -3187,7 +3187,7 @@ details-disclosure > details {
 
 .rte ul,
 .rte ol {
-  list-style-position: inside;
+  list-style-position: outside;
   padding-left: 2rem;
 }
 
