Updated the h tags

--- a/assets/custom-tailwind.css
+++ b/assets/custom-tailwind.css
@@ -1,4 +1,6 @@
 /** Typography styles **/
+h1,
+h2,
 .h0,
 .h1,
 .h2,
@@ -6,20 +8,8 @@
 .h4,
 .hxl,
 .badge,
-.ingredients__accordion-content h1,
-.ingredients__accordion-content h2,
-.ingredients__accordion-content h3,
+.button,
 .jdgm-rev-widg__title {
-  @apply twcss-font-bold !important;
-  @apply twcss-text-black;
-}
-
-.title--primary,
-.contains-content-container h3,
-.banner__content h2,
-.contains-content-container h2,
-.banner__content h2,
-.button {
   @apply twcss-font-bold !important;
 }
 
