--- a/assets/cl-collage.css
+++ b/assets/cl-collage.css
@@ -18,7 +18,7 @@
 @media screen and (max-width: 749px) {
   .cl-collage {
     grid-column-gap: var(--grid-mobile-horizontal-spacing);
-    grid-row-gap: var(--grid-mobile-vertical-spacing);
+    grid-row-gap: 20px;
   }
 
   .cl-collage--mobile {
