--- a/sections/image-banner.liquid
+++ b/sections/image-banner.liquid
@@ -183,6 +183,7 @@
       --button-secondary-bg: 142, 194, 201;
       .banner__buttons .button:nth-child(2) {
         background-color: rgb(var(--button-secondary-bg));
+        color: black;
       }
       .banner__buttons .button:nth-child(2)::after {
         box-shadow: 0 0 0 rgba(var(--button-secondary-bg)) !important;
