--- a/sections/cl-main-product.liquid
+++ b/sections/cl-main-product.liquid
@@ -84,6 +84,9 @@
           id="ProductInfo-{{ section.id }}"
           class="product__info-container{% if section.settings.enable_sticky_info %} product__column-sticky{% endif %}"
         >
+          {% for range in product.metafields.custom.range.value %}
+            <a class="product-range__link" href="/collections/{{ range | downcase }}">{{ range }}</a>
+          {% endfor %}
           {%- assign product_form_id = 'product-form-' | append: section.id -%}
           {%- for block in section.blocks -%}
             {%- case block.type -%}
