--- a/sections/pre-header.liquid
+++ b/sections/pre-header.liquid
@@ -1,5 +1,6 @@
+
 <div class='twcss-text-black twcss-w-full twcss-text-right twcss-bg-gray-200 twcss-py-2 twcss-hidden md:twcss-block twcss-text-xl'>
-  <div class='twcss-max-w-[1440px] twcss-m-auto twcss-px-20'>
+  <div class='pre-header__links twcss-max-w-[1440px] twcss-m-auto twcss-px-20'>
     {% if section.blocks.size > 0 %}
       {% for block in section.blocks %}
         {% if block.settings.menu != blank %}
@@ -13,7 +14,7 @@
     {% endif %}
   </div>
 </div>
-
+<script src="{{ 'pre-header.js' | asset_url }}" defer="defer"></script>
 {% schema %}
 {
   "name": "Pre Header",
