--- a/snippets/cl-card-product.liquid
+++ b/snippets/cl-card-product.liquid
@@ -336,6 +336,11 @@
                   </button>
                   <div id="QuickAddInfo-{{ card_product.id }}" class="quick-add-modal__content-info"></div>
                 </div>
+                {%- comment -%}Add product JSON with explicit section ID{%- endcomment -%}
+                <script type="application/json" id="ProductJSON-{{ section.id }}">
+                  {{ product | json }}
+                </script>
+                <script src="{{ 'cl-points-calculator.js' | asset_url }}" defer="defer"></script>
               </quick-add-modal>
             {%- else -%}
               <product-form data-section-id="{{ section.id }}">
