Fixed product image cut off and arrow icon quick add css issues

--- a/assets/quick-add.css
+++ b/assets/quick-add.css
@@ -417,3 +417,6 @@ quick-add-bulk .quantity__input {
 .quantity__input-disabled {
   pointer-events: none;
 }
+.product__view-details svg {
+  display: inline-block;
+}
