--- a/snippets/cl-card-collection-ranges.liquid
+++ b/snippets/cl-card-collection-ranges.liquid
@@ -76,7 +76,7 @@
               width="{{ card_collection.featured_image.width }}"
               loading="lazy"
               class="motion-reduce"
-              {% if ratio == 1.5 %} style="object-position:50% 100%;" {% endif %}
+              {% comment %} {% if ratio == 1.5 %} style="object-position:50% 100%;" {% endif %} {% endcomment %}
             >
           </div>
         </div>
