--- a/assets/cl-collage-original.css
+++ b/assets/cl-collage-original.css
@@ -69,16 +69,16 @@
   }
 
   .cl-collage__item--left:nth-child(3n - 2):last-child {
-    grid-column: 4 / span 1;
-  }
-
-  .cl-collage__item--left:nth-child(3n - 1) {
     grid-column: 3 / span 2;
     grid-row: span 1;
   }
 
+  .cl-collage__item--left:nth-child(3n - 1) {
+    grid-column-start: 3;
+  }
+
   .cl-collage__item--left:nth-child(3n) {
-    grid-column: 3 / span 1;
+    grid-column-start: 4;
   }
 
   .cl-collage__item--left:nth-child(3n - 1):last-child {
